--- a/videoUI/src/components/globalSass/components/_variables.scss
+++ b/videoUI/src/components/globalSass/components/_variables.scss
@@ -4,3 +4,4 @@ $third-color : #272727;
 $fourth-color: #f8ffb6;
 $fifth-color: #5a5a5a;
 $fifth-color: darken($third-color, 5%);
+$sixth-color: #fcffe4;
