--- a/videoUI/src/components/videochatpage/searchbar/userprofile.module.scss
+++ b/videoUI/src/components/videochatpage/searchbar/userprofile.module.scss
@@ -6,31 +6,39 @@
     padding: 0 0.75rem 0 0.75rem;
     display: flex;
     margin: 0.25rem 0 0 0;
-    font-size: 1.2rem;
     justify-content: center;
 }
 
 &__userprofile{
+    //border-top: 6px solid $primary-color;
 background-color: #272727;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1000' height='1000' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%233b3b3b' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23272727'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
 background-color: lighten($third-color, 5%);
+    border-radius: 0.25rem;
 margin: 1rem;
-        padding: 1.5rem 1rem 1.5rem 1rem !important;
+padding: 0rem !important;
+        //padding: 1.5rem 1rem 1.5rem 1rem !important;
         //border: solid $primary-color 2px;
-        box-shadow: 0px 0px 2px 0px lighten($third-color, 15%);
+        box-shadow: 0px 1px 3px 0px darken($third-color, 5%);
+    
+    &:hover{
+        width: 80%;
+        border-radius: 0.45rem;
+        border: solid $fourth-color !important;
+    }
     }
     &__date{
-        justify-content: flex-start !important;
+
+        justify-content: center !important;
         display: flex !important;
         line-height: 2rem;
         margin: 0.5rem 0 0.5rem 0 !important;
-        border-bottom:solid $fourth-color 0.5px;    
+        //border-bottom:solid $fourth-color 0.5px;    
         align-items: center;
     }
     &__image{
         line-height: 2rem;
         margin: 0.25rem 0 0.25rem 0;
-        border-bottom:solid $fourth-color 0.5px;    
+        //border-bottom:solid $fourth-color 0.5px;    
         padding: 0.5rem 0 0.5rem 0;
         //background-color:lighten($third-color, 15%);
         display: flex;
@@ -50,7 +58,7 @@ margin: 1rem;
         
     }
     &__bio{
-        
+        flex-direction: column !important;
         display: flex;
         align-items: center;
         justify-content: flex-start !important;
@@ -72,47 +80,64 @@ margin: 1rem;
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: lighten($third-color, 20%);
-        color: $fourth-color;
-        font-size: 0.85rem;
-        padding: 0.5rem 1rem 0.5rem 1rem;
         border-radius: 0.5rem;
-        margin: 0.5rem 0.5rem 0.5rem 0;
    &.followers{
-       background-color: lighten($fourth-color, 5%);
-       color: $third-color;
+       font-size: 1rem;
+       color: lighten($third-color, 50%);
+       letter-spacing: 1px;
        font-weight: 600;
    }
-   &.username{
-    background-color: $third-color;
-}
+   &.bio{
+    letter-spacing: 1px;
+    color: lighten($third-color, 50%);
+    font-weight: 600;
+       font-size: 1rem;
+   }
+
     }
     &__text{
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size:0.75rem;
+        font-size: 1.15rem;
         color: $fourth-color;
         //margin: 0 0.5rem 0 0;
     &.followers{
         margin: 0 1.5rem 0 0.25rem;
     }
     &.username{
-        font-size: 1.15rem;
+        border-radius: 0.35rem;
+        padding: 0.25rem;
+        color: $fourth-color;
+        font-weight: 700;
+        margin: 0.5rem 0;
+ //background-color: lighten($third-color, 15%); 
+        font-size: 1.05rem;
+        letter-spacing: 1px;
     }
     
     }
     &__bio{
         color: $fourth-color;
-        font-weight: 400;
+        font-weight: 300;
         font-size: 0.75rem;
         padding: 0.5rem 1rem 0.5rem 1rem;
     }
 }
 .container{
     &__followers{
+        padding: 0.75rem 0;
         width: 100%;
-        display: flex;
+        align-items: center !important;
+        display: flex !important;
         justify-content: flex-start;
+    }
+    &__button{
+        border-top: solid lighten($third-color, 15%) !important;
+        //background-color: lighten($fourth-color, 5%);
+        display: flex !important;
+        padding: 1rem !important;
+        align-items: center !important;
+        justify-content: center !important;
     }
 }
