--- a/videoUI/src/components/homepage/subComponents/appfeatures.module.scss
+++ b/videoUI/src/components/homepage/subComponents/appfeatures.module.scss
@@ -1,27 +1,18 @@
 @use '../main.scss' as *;
 .container{
     &__card{
-        margin: 5rem 0 0 0;
-        width: 25%;
-       display: flex;
-       flex-direction: column;
-       align-items: center;     
-       //border: solid $secondary-color;
-       padding: 1rem;
-       z-index: 5;        
-    &:nth-child(2){
-
-        margin: -1rem 1rem 1rem 1rem;
-        //box-shadow: 0 0 3px 0 gray;
+        box-shadow: 0 0 3px 0 $sixth-color;
+        border-radius: 0.5rem;
+        //background-color: $third-color;
+       z-index: 5;      
+       margin: 0.5rem 0 0.5rem;
+    
+       &:nth-child(1){
+        border: solid orange !important;
+        box-shadow: 0 0 3px 0 gray;
     }
 }
-    &__column{
-        display: flex;
-        justify-content: center;
-        border: solid orange;
-    }
     &__icon{
-
     }
     &__title{
 
@@ -31,19 +22,27 @@
     }
 }
 .title{
-    margin: 1rem 0 1rem 0;
+    margin: 0.75rem 0 0.75rem 0;
 font-size: 1.75rem;
+font-weight: 700;
+//color: $sixth-color;
+color: $third-color;
 }
 .paragraph{
-    padding: 0 0 0 2.5rem;
+    color: $third-color;
+
+    //color: $sixth-color;
     text-align: left;
-font-size: 1rem;
+font-size: 0.9rem;
 }
 .icon{
-    color: $secondary-color;
+    color: $third-color;
+
+//    color: $sixth-color;
     font-size: 3rem;
     animation: iconbounce 4s ease-in-out infinite;
     transition: all ease-in-out 0.5s;
+
 }
 @keyframes iconbounce {
     0% {
