--- a/videoUI/src/components/videochatpage/friends/friendlayout.module.scss
+++ b/videoUI/src/components/videochatpage/friends/friendlayout.module.scss
@@ -13,6 +13,7 @@ background-color: $third-color;
     padding: 1rem 0 1rem 0;
 }
 &__profile{
+    margin: 0.15rem 0 0.15rem 0 !important;
 &.toggled{
     border: solid orange !important;
 }
