--- a/videoUI/src/components/homepage/subComponents/footer.module.scss
+++ b/videoUI/src/components/homepage/subComponents/footer.module.scss
@@ -2,7 +2,7 @@
 
 .icon{
     color: $fourth-color;
-    font-size: 2rem;
+    font-size: 1.75rem;
 }
 
 .text{
@@ -12,28 +12,33 @@
         font-weight: 400;
     }
     &__about{
-        padding: 1rem 2rem 2rem 2rem;
+        padding: 1rem 1rem 2rem 2rem;
         font-size: 0.9rem;
         font-weight: 400;
         color: $sixth-color;
     }
     &__anchor{
-        
     }
 
 }
 .container{
+    &__design{
+        background-color: lighten($third-color, 10%);
+        padding: 1rem;
+    }
     &__footer{
-        padding: 2rem;
+        padding: 0 !important;
     }
     &__about{
-        display: flex;
-        align-self: center;
-        text-align: left;
+        padding: 1rem 0 1qrem 0;
     }
     &__link{
+        padding: 2rem 0 2rem 0;
+        &__item {
+            display: flex;
+            flex-direction: column;
+        }
     }
     &__row{
-        justify-content: center !important;
-    }
+    }   
 }
