--- a/videoUI/src/components/globalSass/components/_config.scss
+++ b/videoUI/src/components/globalSass/components/_config.scss
@@ -4,3 +4,19 @@
     box-sizing: border-box;
 }
 
+html {
+    @media(min-width: 320px){
+        font-size: 70%;
+    }
+    @media(min-width: 768px){
+        font-size: 90%;
+    }
+    @media(min-width: 1024px){
+    }
+}
+
+h1{
+    @media(min-width:320px){
+        font-size: 20%;
+    }
+}
