--- a/videoUI/src/components/homepage/subComponents/appfeatures.module.scss
+++ b/videoUI/src/components/homepage/subComponents/appfeatures.module.scss
@@ -1,12 +1,15 @@
 @use '../main.scss' as *;
+
 .container{
     &__card{
         box-shadow: 0 0 3px 0 $sixth-color;
         border-radius: 0.55rem;
-        //background-color: $third-color;
+        background-color: $sixth-color;
        z-index: 5;      
-       margin: 0.5rem 0 0.5rem;
-    
+        @media(min-width:320px){
+            margin: 0.75rem 0 0.75rem 0;
+            padding: 0.75rem 0 0.75rem 0;
+        }
        &.toggled{
            background-color: $third-color;
        }
@@ -42,12 +45,18 @@ font-size: 0.9rem;
 }
 }
 .icon{
+    @media(min-width:320px){
+        animation: none;
+        font-size: 2rem;
+    }
+    @media(min-width: 578px){
+        display: flex;
+        font-size: 2.2rem;
+        animation: iconbounce 4s ease-in-out infinite;
+        transition: all ease-in-out 0.5s;
+    
+    }
     color: $third-color;
-
-//    color: $sixth-color;
-    font-size: 2.2rem;
-    animation: iconbounce 4s ease-in-out infinite;
-    transition: all ease-in-out 0.5s;
     &.toggled{
         color: $sixth-color;
     }
@@ -59,7 +68,7 @@ font-size: 0.9rem;
 
     }
     50% {
-        transform: translate(0, -1rem);
+        transform: translate(0, -0.5rem);
         transition: all ease-in-out 0.5s;
     
     }
