--- a/videoUI/src/components/videochatpage/notifications/requestnotification.module.scss
+++ b/videoUI/src/components/videochatpage/notifications/requestnotification.module.scss
@@ -7,9 +7,18 @@
     opacity: 0.35;
     z-index: 1;
 }
-
+.image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+}
 
 .container{
+    position: relative;
+    padding: 0 !important;
+    margin: 0 !important;
     background-color: lighten($third-color, 4%);
     height: 100vh;
     overflow-y: scroll;
@@ -27,6 +36,7 @@
     &__row{
     }
     &__header{
+        z-index: 50;
         //border: solid lighten($third-color,25%);
         border-radius: 0.25rem 0.25rem 0 0;
         box-shadow: 0 0 3px 0 $third-color;
